--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -22,3 +22,13 @@
   width: 100%;
   height: 100%;
 }
+
+/* .Content {
+  background-color: #feb;
+  display: block;
+  margin-right: -1em;
+  margin-left: -1em;
+  padding-right: 1em;
+  padding-left: 0.75em;
+  border-left: 0.25em solid #f99;
+} */
