--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -1,8 +1,10 @@
 .Nav {
-  background: rgba(105, 221, 226, 0.3);;
-  position: sticky;
+  /* background: rgba(105, 221, 226, 0.3); */
+  background: rgba(0, 0, 0, .8);
+  position: fixed;
   top: 0;
   z-index: 1;
+  width: 100%;
   /* border-bottom: 1px solid var(--lightGrey); */
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.025);
 }
@@ -18,6 +20,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
+  color: #ddd;
 }
 
 .Nav--Links > * + * {
