--- a/src/templates/SinglePost.css
+++ b/src/templates/SinglePost.css
@@ -1,5 +1,5 @@
 .SinglePost {
-  background: var(--lightGrey);
+  /* background: var(--lightGrey); */
 }
 
 .SinglePost--BackButton {
@@ -49,7 +49,7 @@
 }
 
 .SinglePost--InnerContent {
-  padding: 0 8rem;
+  padding: 0 2rem;
 }
 
 @media screen and (max-width: 750px) {
